Show TLS decryption errors in HTTP log

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -581,4 +581,6 @@
     <string name="http_requests">HTTP requests</string>
     <string name="switch_to_http">Show HTTP requests</string>
     <string name="switch_to_connections">Show connections</string>
+    <string name="decryption_error">Decryption error</string>
+    <string name="no_error">No error</string>
 </resources>
