--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -340,9 +340,10 @@
     <string name="network_traffic">Traffic</string>
     <string name="warn_no_app_data">No application data has been exchanged</string>
     <string name="waiting_application_data">Waiting data</string>
-    <string name="display_as">Display as…</string>
-    <string name="printable_text">Printable text</string>
+    <string name="text">Text</string>
     <string name="hexdump">Hexdump</string>
+    <string name="display_as_text">Display as text</string>
+    <string name="display_as_hexdump">Display as hexdump</string>
     <string name="geolocation">Geolocation</string>
     <string name="geolocation_summary">Show country and ASN info by performing offline lookups</string>
     <string name="downloading">Downloading…</string>
