Implement HAR export of HTTP and WebSocket data
Implement the ability to export the HTTP log/a single HTTP request
to the HAR 1.2 format. The export happens in a separate thread to
avoid blocking the UI, with the ability to cancel.

WebSocket data is exported in the Chrome DevTools extension format.

See #184

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -350,6 +350,8 @@
     <string name="download_in_progress">Download in progress, please wait</string>
     <string name="pcap_load_in_progress">Capture file loading in progress, please wait</string>
     <string name="download_failed">Download failed</string>
+    <string name="exporting">Exporting…</string>
+    <string name="export_in_progress">Export in progress, please wait</string>
     <string name="geo_db_not_found">Database not found. Geolocation is disabled</string>
     <string name="geo_db_missing">Geolocation database missing</string>
     <string name="country_rules_warning">To use country-based firewall rules, download the geolocation database from the PCAPdroid settings, otherwise country-based rules will be ineffective</string>
@@ -587,4 +589,6 @@
     <string name="decryption_error">Decryption error</string>
     <string name="previous">Previous</string>
     <string name="next">Next</string>
+    <string name="save_as_text">Save as text</string>
+    <string name="save_as_har">Save as HAR</string>
 </resources>
