Update Italian strings

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -129,7 +129,7 @@
     <string name="feature_not_available">Questa funzione non è attualmente disponibile per il tuo dispositivo</string>
     <string name="billing_connecting">La connessione a Google Play è in corso, riprovare tra poco</string>
     <string name="malicious_connection_filter">Malevola</string>
-    <string name="status_filter">Stato: %1$s</string>
+    <string name="status_filter">Stato HTTP: %1$s</string>
     <string name="not_hidden_filter">Non nascosta</string>
     <string name="copy_action">Copia…</string>
     <string name="url_val">"URL: %1$s"</string>
@@ -255,7 +255,7 @@
     <string name="websocket">WebSocket</string>
     <string name="rx_direction">RX</string>
     <string name="decrypted">Decifrata</string>
-    <string name="decryption_filter">Decrittazione: %1$s</string>
+    <string name="decryption_filter">Stato: %1$s</string>
     <string name="download">Scarica</string>
     <string name="app_info">Informazioni app</string>
     <string name="action_block">Blocca</string>
@@ -536,4 +536,31 @@
     <string name="tls_decryption_not_supported_16KB">La decrittazione TLS non è attualmente supportata su dispositivi a 16 KB</string>
     <string name="filename_prefix">Prefisso nomi dei file</string>
     <string name="filename_prefix_description">Imposta il prefisso usato per i file esportati da PCAPdroid, e.s. file PCAP</string>
+    <string name="select">Seleziona</string>
+    <string name="request_method">Metodo della richiesta</string>
+    <string name="content_type">Content type</string>
+    <string name="http_status">Status HTTP</string>
+    <string name="method_filter">Metodo: %1$s</string>
+    <string name="text">Testo</string>
+    <string name="content_type_filter">Content-Type: %1$s</string>
+    <string name="display_as_text">Mostra come testo</string>
+    <string name="payload_size_threshold">Soglia dimensione payload</string>
+    <string name="display_as_hexdump">Mostra come hexdump</string>
+    <string name="export_in_progress">Esportazione in corso, attendere</string>
+    <string name="exporting">Esportando…</string>
+    <string name="show_connection">Mostra la connessione</string>
+    <string name="show_system_apps">Mostra app di sistema</string>
+    <string name="item_not_found">Impossibile trovare l\'elemento specificato</string>
+    <string name="no_requests">Nessuna richiesta</string>
+    <string name="destination_host">Host di destinazione</string>
+    <string name="connection_number">Connessione #%1$d</string>
+    <string name="switch_to_connections">Mostra le connessioni</string>
+    <string name="decryption_error">Errore di decrittazione</string>
+    <string name="http_request_number">Richiesta HTTP #%1$d</string>
+    <string name="http_requests">Richieste HTTP</string>
+    <string name="switch_to_http">Mostra le richieste HTTP</string>
+    <string name="save_as_har">Salva come HAR</string>
+    <string name="previous">Precedente</string>
+    <string name="next">Successivo</string>
+    <string name="save_as_text">Salva come testo</string>
 </resources>
