Update Turkish strings

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -93,7 +93,7 @@
     <string name="feature_not_available">Bu özellik şu anda aygıtınız için kullanılabilir değil</string>
     <string name="hidden_connections_help">İlgili olanlara odaklanabilmeniz için bağlantı listesi girdilerini gizlemek için kurallar listesi</string>
     <string name="malicious_connection_filter">Kötü amaçlı</string>
-    <string name="status_filter">Durum: %1$s</string>
+    <string name="status_filter">HTTP durumu: %1$s</string>
     <string name="not_hidden_filter">Gizli değil</string>
     <string name="copy_action">Kopyala…</string>
     <string name="url_val">URL: %1$s</string>
@@ -260,7 +260,7 @@
     <string name="string_http_request">HTTP isteği</string>
     <string name="string_http_response">HTTP yanıtı</string>
     <string name="websocket">WebSocket</string>
-    <string name="decryption_filter">Şifre çözme: %1$s</string>
+    <string name="decryption_filter">Durum: %1$s</string>
     <string name="download_in_progress">İndirme devam ediyor, lütfen bekleyin</string>
     <string name="import_failed">İçe aktarılamadı</string>
     <string name="rules_merge_msg">Var olan kurallar korunsun mu\?</string>
@@ -537,4 +537,31 @@
     <string name="tls_decryption_not_supported_16KB">TLS şifre çözme şu anda 16 KB aygıtlarda desteklenmiyor</string>
     <string name="filename_prefix">Dosya adı ön eki</string>
     <string name="filename_prefix_description">PCAPdroid tarafından dışa aktarılan dosyalar (örneğin PCAP dosyaları) için ön ek ayarlayın</string>
+    <string name="select">Seç</string>
+    <string name="request_method">İstek yöntemi</string>
+    <string name="content_type">İçerik türü</string>
+    <string name="http_status">HTTP durumu</string>
+    <string name="payload_size_threshold">Yük boyutu eşiği</string>
+    <string name="method_filter">Yöntem: %1$s</string>
+    <string name="content_type_filter">Content-Type: %1$s</string>
+    <string name="text">Metin</string>
+    <string name="display_as_text">Metin olarak görüntüle</string>
+    <string name="display_as_hexdump">Onaltılık döküm olarak görüntüle</string>
+    <string name="exporting">Dışa aktarılıyor…</string>
+    <string name="export_in_progress">Dışa aktarma devam ediyor, lütfen bekleyin</string>
+    <string name="show_connection">Bağlantıyı göster</string>
+    <string name="show_system_apps">Sistem uygulamalarını göster</string>
+    <string name="destination_host">Hedef ana makine</string>
+    <string name="no_requests">İstek yok</string>
+    <string name="item_not_found">Belirtilen öge bulunamadı</string>
+    <string name="connection_number">Bağlantı #%1$d</string>
+    <string name="http_request_number">HTTP isteği #%1$d</string>
+    <string name="http_requests">HTTP istekleri</string>
+    <string name="switch_to_http">HTTP isteklerini göster</string>
+    <string name="switch_to_connections">Bağlantıları göster</string>
+    <string name="decryption_error">Şifre çözme hatası</string>
+    <string name="previous">Önceki</string>
+    <string name="next">Sonraki</string>
+    <string name="save_as_text">Metin olarak kaydet</string>
+    <string name="save_as_har">HAR olarak kaydet</string>
 </resources>
