Update Russian strings

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -128,7 +128,7 @@
     <string name="feature_not_available">Эта возможность на текущий момент недоступна для вашего устройства</string>
     <string name="billing_connecting">Подключение к Google Play в процессе, пожалуйста попробуйте еще раз позже</string>
     <string name="malicious_connection_filter">Вредоносные</string>
-    <string name="status_filter">Статус: %1$s</string>
+    <string name="status_filter">HTTP статус: %1$s</string>
     <string name="not_hidden_filter">Не скрыты</string>
     <string name="copy_action">Копировать…</string>
     <string name="url_val">"URL: %1$s"</string>
@@ -225,7 +225,7 @@
     <string name="websocket">Веб-сокет</string>
     <string name="http">HTTP</string>
     <string name="payload">Содержимое</string>
-    <string name="decryption_filter">Дешифрование: %1$s</string>
+    <string name="decryption_filter">Статус: %1$s</string>
     <string name="connection_start_not_seen">PCAPdroid не обнаружил начало этого соединения. Некоторая информация может быть потеряна</string>
     <string name="full_payload_summary">Отображать полное содержимое соединений (например полные HTTP запросы и ответы). Это требует много памяти, не используйте при продолжительных захватах</string>
     <string name="tx_direction">TX</string>
@@ -525,4 +525,34 @@
     <string name="generate_api_key">Сгенерировать ключ API</string>
     <string name="show_api_key">Показать ключ API</string>
     <string name="api_key">Ключ API</string>
+    <string name="select">Выбрать</string>
+    <string name="request_method">Метод запроса</string>
+    <string name="http_status">HTTP статус</string>
+    <string name="method_filter">Метод: %1$s</string>
+    <string name="text">Текст</string>
+    <string name="display_as_text">Отобразить как текст</string>
+    <string name="display_as_hexdump">Отобразить как hex-дамп</string>
+    <string name="switch_to_http">Показать HTTP запросы</string>
+    <string name="switch_to_connections">Показать соединения</string>
+    <string name="no_requests">Нет запросов</string>
+    <string name="save_as_text">Сохранить как текст</string>
+    <string name="save_as_har">Сохранить как HAR</string>
+    <string name="show_system_apps">Показывать системные приложения</string>
+    <string name="filename_prefix">Префикс имени файла</string>
+    <string name="filename_prefix_description">Настройка префикса для файлов, экспортируемых PCAPdroid, например PCAP файлы</string>
+    <string name="connection_number">Соединение #%1$d</string>
+    <string name="http_request_number">HTTP запрос #%1$d</string>
+    <string name="decryption_error">Ошибка дешифрования</string>
+    <string name="http_requests">HTTP запросы</string>
+    <string name="show_connection">Показать соединение</string>
+    <string name="exporting">Экспортируется…</string>
+    <string name="export_in_progress">Выполняется экспорт, пожалуйста подождите</string>
+    <string name="destination_host">Хост назначения</string>
+    <string name="payload_size_threshold">Пороговый размер содержимого</string>
+    <string name="previous">Предыдущий</string>
+    <string name="next">Следующий</string>
+    <string name="content_type">Content type</string>
+    <string name="content_type_filter">Content-Type: %1$s</string>
+    <string name="tls_decryption_not_supported_16KB">Дешифрование TLS на текущий момент не поддерживается на устройствах со страницей памяти 16КБ</string>
+    <string name="item_not_found">Не удалось найти указанный элемент</string>
 </resources>
